--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Turbo
+.turbo
+*.turbo
+
+# Laravel
 *.log
 .DS_Store
 .env
@@ -12,7 +17,6 @@
 /.vscode
 /.zed
 /auth.json
-/node_modules
 /public/build
 /public/hot
 /public/storage
@@ -22,3 +26,41 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+# Node
+/node_modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Frontend specific
+/apps/frontend/dist
+/apps/frontend/.vite
+/apps/frontend/coverage
+
+# Backend specific
+/apps/backend/vendor
+/apps/backend/node_modules
+/apps/backend/public/build
+/apps/backend/public/hot
+/apps/backend/storage/*.key
+/apps/backend/storage/pail
+/apps/backend/.phpunit.cache
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Env files
+.env
+.env.*
+!.env.example
