--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,12 +51,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
-          cache-dependency-path: apps/web/package-lock.json
 
       - name: Install Web dependencies
         working-directory: apps/web
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Lint Web
         working-directory: apps/web
