--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,51 @@
 services:
-  # ================================
-  # API Service (Laravel PHP-FPM)
-  # ================================
   api:
     build:
       context: .
-      dockerfile: docker/api/Dockerfile
+      dockerfile: docker/api.Dockerfile
     container_name: kedai-api
     restart: unless-stopped
-    volumes:
-      - api-storage:/var/www/html/storage
-      - api-database:/var/www/html/database
     environment:
-      - APP_ENV=${APP_ENV:-production}
-      - APP_KEY=${APP_KEY}
-      - APP_DEBUG=${APP_DEBUG:-false}
-      - APP_URL=${APP_URL:-http://localhost}
+      - APP_ENV=production
+      - APP_DEBUG=false
+      - APP_KEY=${APP_KEY:-base64:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}
       - DB_CONNECTION=sqlite
-      - DB_DATABASE=/var/www/html/database/database.sqlite
-      - JWT_SECRET=${JWT_SECRET}
-      - LOG_CHANNEL=stack
-      - CACHE_STORE=file
-      - SESSION_DRIVER=file
-      - QUEUE_CONNECTION=sync
+      - DB_DATABASE=/var/www/api/database/database.sqlite
+      - JWT_SECRET=${JWT_SECRET:-your-jwt-secret-here}
+    volumes:
+      - api-storage:/var/www/api/storage
+      - api-database:/var/www/api/database
     networks:
       - kedai-network
-    healthcheck:
-      test: ["CMD", "php-fpm", "-t"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
-  # ================================
-  # API Nginx (Reverse Proxy for PHP)
-  # ================================
   api-nginx:
     image: nginx:alpine
     container_name: kedai-api-nginx
     restart: unless-stopped
     ports:
-      - "${API_PORT:-8000}:80"
+      - "8000:80"
     volumes:
-      - ./docker/nginx/api.conf:/etc/nginx/conf.d/default.conf:ro
-      - api-storage:/var/www/html/storage:ro
+      - ./docker/api-nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./apps/api/public:/var/www/api/public:ro
     depends_on:
       - api
     networks:
       - kedai-network
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
-  # ================================
-  # Web Service (React/Vite)
-  # ================================
   web:
     build:
       context: .
-      dockerfile: docker/web/Dockerfile
+      dockerfile: docker/web.Dockerfile
       args:
         - VITE_API_URL=${VITE_API_URL:-http://localhost:8000/api}
     container_name: kedai-web
     restart: unless-stopped
     ports:
-      - "${WEB_PORT:-80}:80"
+      - "80:80"
     depends_on:
       - api-nginx
     networks:
       - kedai-network
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 networks:
   kedai-network:
@@ -82,6 +53,4 @@ networks:
 
 volumes:
   api-storage:
-    driver: local
   api-database:
-    driver: local
